--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,101 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, intial-scale=1"/>
   <title>Index</title>
-  <style>
-    body {
-      font-size: 1em;
-      padding: 0;
-      margin: 0;
-      height: 100%;
-    }
-
-    html {
-      font-size: 100%;
-      height: 100%;
-    }
-
-    .main {
-      width: 100%;
-      height: 100%;
-    }
-
-    .content {
-      width: 100%;
-      height: 100%;
-    }
-
-    .tab_bar {
-      background: #fff;
-      position: fixed;
-      left: 0;
-      bottom: 0;
-      height: 3em;
-      display: -webkit-flex; /* Safari */
-      display: flex;
-      /*主轴方向*/
-      -webkit-flex-direction: row; /* Safari */
-      flex-direction: row;
-      -webkit-flex-wrap: wrap; /* Safari */
-      flex-wrap: wrap;
-      width: 100%;
-      margin: 0 auto;
-      box-sizing: border-box;
-      border-top: rgba(63, 63, 63, 0.75) solid 1px;
-    }
-
-    .f_l {
-      float: left;
-    }
-
-    .tab_item {
-      flex: 1 1 20%;
-    }
-
-    .tab_item .bar_img {
-      display: inline-block;
-      text-align: center;
-      margin: 0 auto;
-      line-height: 3em;
-      height: 3em;
-      width: 4em;
-    }
-
-    .top_bar {
-      position: fixed;
-      height: 48px;
-      left: 0;
-      top: 0;
-      width: 100%;
-      background: #CC120D;
-      opacity: 0.5;
-    }
-
-    ._search {
-      margin: 0 10px;
-    }
-
-    .search_box {
-      border-radius: 15px;
-      height: 30px;
-      width: 200px;
-    }
-
-    .tb_item {
-      height: 48px;
-    }
-
-    .tb_item .logo {
-      width: 60px;
-    }
-
-    .tb_item .search_box {
-      width: 60px;
-    }
-
-    .tb_item .login {
-      width: 60px;
-    }
-  </style>
+  <link href="./style/common.css" rel="stylesheet" type="text/css"/>
+  <link href="./style/index.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 <div class="main">
@@ -108,7 +15,7 @@
         京东
       </div>
       <div class="tb_item search_box f_l">
-    ssss
+        ssss
       </div>
       <div class="tb_item login f_l">
         登录
@@ -117,7 +24,12 @@
   </div>
 
   <div class="content">
+    <div class="floor slider-wraper">
 
+    </div>
+    <div class="floor">
+
+    </div>
   </div>
   <div class="tab_bar">
     <div class="tab_item">
