--- a/src/views/index.html
+++ b/src/views/index.html
@@ -24,14 +24,71 @@
   </div>
 
   <div class="content">
-    <div class="floor slider-wraper">
-
+    <div id="slider" class="floor slider-wrapper">
+      <ul class="ul-slider">
+        <li class="li-slider">
+          <img
+            src="//m.360buyimg.com/mobilecms/s720x322_jfs/t3067/96/5470589001/61302/9c3a5776/586f74f2N9ec6b3d5.jpg!q70.jpg">
+        </li>
+      </ul>
     </div>
     <div class="floor">
+      <div class="floor-item">
+        <a href="#" class="hot-slider">
+          <img class="floor"
+               src="//m.360buyimg.com/mobilecms/jfs/t3055/59/5513487557/58962/f9cb5d66/586f9980N9bfe36f9.jpg!q70.jpg"/>
+        </a>
+      </div>
+    </div>
+    <div class="floor">
+      <div class="nav-cate">
+        <div class="nav-item">
+          <img src="//m.360buyimg.com/mobilecms/s80x80_jfs/t3079/222/1812395993/14681/29321e2c/57d54122N700d9c1b.png">
+          <span>京东超市</span>
+        </div>
+        <div class="nav-item">
+          <img src="//m.360buyimg.com/mobilecms/s80x80_jfs/t3079/222/1812395993/14681/29321e2c/57d54122N700d9c1b.png">
+          <span>京东超市</span>
+        </div>
+        <div class="nav-item">
+          <img src="//m.360buyimg.com/mobilecms/s80x80_jfs/t3079/222/1812395993/14681/29321e2c/57d54122N700d9c1b.png">
+          <span>京东超市</span>
+        </div>
+        <div class="nav-item">
+          <img src="//m.360buyimg.com/mobilecms/s80x80_jfs/t3079/222/1812395993/14681/29321e2c/57d54122N700d9c1b.png">
+          <span>京东超市</span>
+        </div>
+        <div class="nav-item">
+          <img src="//m.360buyimg.com/mobilecms/s80x80_jfs/t3079/222/1812395993/14681/29321e2c/57d54122N700d9c1b.png">
+          <span>京东超市</span>
+        </div>
+        <div class="nav-item">
+          <img src="//m.360buyimg.com/mobilecms/s80x80_jfs/t3079/222/1812395993/14681/29321e2c/57d54122N700d9c1b.png">
+          <span>京东超市</span>
+        </div>
+        <div class="nav-item">
+          <img src="//m.360buyimg.com/mobilecms/s80x80_jfs/t3079/222/1812395993/14681/29321e2c/57d54122N700d9c1b.png">
+          <span>京东超市</span>
+        </div>
+        <div class="nav-item">
+          <img src="//m.360buyimg.com/mobilecms/s80x80_jfs/t3079/222/1812395993/14681/29321e2c/57d54122N700d9c1b.png">
+          <span>京东超市</span>
+        </div>
+        <div class="nav-item">
+          <img src="//m.360buyimg.com/mobilecms/s80x80_jfs/t3079/222/1812395993/14681/29321e2c/57d54122N700d9c1b.png">
+          <span>京东超市</span>
+        </div>
+        <div class="nav-item">
+          <img src="//m.360buyimg.com/mobilecms/s80x80_jfs/t3079/222/1812395993/14681/29321e2c/57d54122N700d9c1b.png">
+          <span>京东超市</span>
+        </div>
+      </div>
+    </div>
+    <div class="express_news">
 
     </div>
   </div>
-  <div class="tab_bar">
+  <div class="floor tab_bar">
     <div class="tab_item">
       <span class="bar_img">
         首页
