--- a/src/views/style/index.css
+++ b/src/views/style/index.css
@@ -1,15 +1,20 @@
 .main {
-  width: 100%;
+  max-width: 640px;
   height: 100%;
+  min-width: 300px;
+  margin: 0px auto;
+  padding: 0px;
 }
 
 .content {
   width: 100%;
   height: 100%;
 }
-.floor{
+
+.floor {
   width: 100%;
 }
+
 .tab_bar {
   background: #fff;
   position: fixed;
@@ -49,7 +54,7 @@
   top: 0;
   width: 100%;
   background: #CC120D;
-  opacity: 0.5;
+  opacity: 0;
 }
 
 ._search {
@@ -77,6 +82,53 @@
 .tb_item .login {
   width: 60px;
 }
-.slider-wraper{
-  height: 178px;
+
+.slider-wrapper {
+  width: 100%;
+  height: auto;
+}
+
+.ul-slider {
+  margin: 0px;
+  padding: 0;
+  width: 100%;
+  height: auto;
+  list-style: none;
+}
+
+.li-slider {
+  width: 100%;
+}
+
+.li-slider img {
+  width: 100%;
+  height: auto;
+  min-width: 300px;
+}
+
+/* 分类栏目 */
+.nav-cate {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap-reverse;
+}
+
+.nav-item {
+  flex: 1 1 20%;
+  width: 100%;
+}
+
+.nav-item img {
+  max-height: 60px;
+  max-width: 60px;
+  width: 3em;
+  height: 3em;
+  margin: 0 auto;
+}
+
+/* 滚动新闻 */
+.express_news {
+  width: 100%;
+  height: 2em;
+  background: #6c6c6c;
 }
